<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/LoginLayout"
        android:orientation="vertical"
        tools:context=".passwordlogin.PasswordLoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/password_login_margin_top"
            app:errorText="@{viewModel.userNameError}"
            app:hintTextAppearance="@style/EditTextHintTextSize">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                style="@style/LoginInputField"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.userName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/PasswordTextInputLayout"
            android:layout_marginTop="@dimen/password_login_margin_top"
            app:errorText="@{viewModel.passwordError}"
            app:hintTextAppearance="@style/EditTextHintTextSize">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/PasswordLoginInputField"
                android:autofillHints="password"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            style="@style/LoginButton"
            android:layout_marginTop="@dimen/password_login_margin_top"
            android:onClick="@{(v)-> viewModel.onLoginClick()}"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnVerificationLogin"
            style="@style/LoginButton"
            android:layout_marginTop="@dimen/password_login_margin_top"
            android:onClick="@{(v)-> viewModel.onVerificationLoginClick.invoke()}"
            android:text="@string/login_using_phone_number"
            android:visibility="@{viewModel.verificationLoginButtonVisibility}" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/SecondaryLoginButton"
            android:layout_marginTop="@dimen/password_login_margin_top"
            android:onClick="@{(v)-> viewModel.onSignUpClick.invoke()}"
            android:text="@string/sign_up"
            android:visibility="@{viewModel.signUpButtonVisibility}" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/password_login_margin_top"
            android:onClick="@{(v)-> viewModel.onForgetPasswordClick.invoke()}"
            android:padding="@dimen/forget_password_button_padding"
            android:text="@string/forget_password"
            android:visibility="@{viewModel.forgetPasswordButtonVisibility}" />

    </LinearLayout>

    <data>

        <variable
            name="viewModel"
            type="com.github.mohamedwael.login.passwordlogin.PasswordLoginViewModel" />
    </data>
</layout>
