<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.mohamedwael.login.verificationcodelogin.usernamevalidation.UsernameValidationViewModel" />
    </data>

    <LinearLayout
        style="@style/LoginLayout"
        android:orientation="vertical"
        tools:context=".verificationcodelogin.usernamevalidation.UsernameValidationFragment">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/password_login_margin_top"
            app:errorText="@{viewModel.userNameError}"
            app:hintTextAppearance="@style/EditTextHintTextSize">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                style="@style/LoginInputField"
                android:hint="@string/user_name"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.userName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/LoginButton"
            android:layout_marginTop="30dp"
            android:onClick="@{(v)-> viewModel.onLoginClick()}"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/SecondaryLoginButton"
            android:layout_marginTop="30dp"
            android:onClick="@{(v)-> viewModel.onSignUpClick.invoke()}"
            android:text="@string/sign_up"
            android:visibility="@{viewModel.signUpButtonVisibility}" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:onClick="@{(v)-> viewModel.onForgetPasswordClick.invoke()}"
            android:padding="@dimen/forget_password_button_padding"
            android:text="@string/forget_password"
            android:visibility="@{viewModel.forgetPasswordButtonVisibility}" />

    </LinearLayout>
</layout>