<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.mohamedwael.login.forgetpassword.ForgetPasswordViewModel" />
    </data>

    <LinearLayout
        style="@style/LoginLayout"
        android:orientation="vertical"
        tools:context=".forgetpassword.ForgetPasswordFragment">

        <TextView
            android:id="@+id/tvSMSVVerificationTitle"
            style="@style/MainTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verification_title_margin_top"
            android:text="@{viewModel.forgetPasswordTitle}"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            tools:text="@string/forget_password" />

        <TextView
            android:id="@+id/tvSMSVVerificationDescription"
            style="@style/TitleTextMiniSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verification_description_margin_top"
            android:text="@{viewModel.forgetPasswordDescription}"
            tools:text="@string/forget_password_description" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/password_login_margin_top"
            app:errorText="@{viewModel.userNameError}"
            app:hintTextAppearance="@style/EditTextHintTextSize">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                style="@style/LoginInputField"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.userName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnForgetPassword"
            style="@style/LoginButton"
            android:layout_marginTop="@dimen/password_login_margin_top"
            android:onClick="@{(v)->viewModel.onForgetPasswordClick.invoke()}"
            android:text="@string/forget_password_send" />

    </LinearLayout>
</layout>