<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.mohamedwael.login.createpassword.CreatePasswordViewModel" />
    </data>

    <LinearLayout
        style="@style/LoginLayout"
        android:orientation="vertical"
        tools:context=".createpassword.CreatePasswordFragment">

        <TextView
            style="@style/TitleTextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/PasswordTextInputLayout"
            android:layout_marginTop="@dimen/create_password_margin_top"
            app:errorText="@{viewModel.passwordError}"
            app:hintTextAppearance="@style/EditTextHintTextSize">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/PasswordLoginInputField"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/PasswordTextInputLayout"
            android:layout_marginTop="@dimen/create_password_margin_top"
            android:visibility="@{viewModel.config.confirmPasswordVisibility}"
            app:errorText="@{viewModel.confirmPasswordError}"
            app:hintTextAppearance="@style/EditTextHintTextSize">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                style="@style/PasswordLoginInputField"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:text="@={viewModel.confirmPassword}"
                android:visibility="@{viewModel.config.confirmPasswordVisibility}"
                app:OnFocusChangeListener="@{viewModel.confirmPasswordFocusChangeListener}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/LoginButton"
            android:layout_marginTop="50dp"
            android:onClick="@{(v)-> viewModel.onSendActionClick.invoke()}"
            android:text="@string/send"
            android:visibility="@{viewModel.config.sendButtonVisibility}" />

    </LinearLayout>
</layout>